--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,5 +1,5 @@
 <h1>Editing Book</h1>
-<%= form_with model: @book, url:update_book_path(@book.id), method: :patch do |f| %>
+<%= form_with model: @book do |f| %>
 <h4>Title</h4>
 <p><%= f.text_field :title %></p>
 <h4>Body</h4>
@@ -7,5 +7,5 @@
 <%= f.submit 'Update Book' %>
 <% end %>
 
-<%= link_to "Show", show_book_path(@book.id) %>
+<%= link_to "Show", book_path(@book.id) %>
 <a href = "/books">Back</a>
