--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,12 +1,20 @@
 <h1>Books</h1>
-<% @books.each do |book| %>
-<p>Title</p>
-<span><%= book.title  %></span>
-<p>Body</p>
-<span><%= book.body %></span>
-<% end %>
-<%= link_to "Show", show_book_path(book.id) %>
-<%= link_to "Edit", edit_book_path(book.id) %>
+<table>
+  <tr>
+    <th>Title</th>
+    <th>Body</th>
+    <th colspan = "3"></th>
+  </tr>
+  <% @books.each do |book| %>
+  <tr>
+    <td><%= book.title  %></td>
+    <td><%= book.body %></td>
+    <td><%= link_to "Show", book_path(book.id) %></td>
+    <td><%= link_to "Edit", edit_book_path(book.id) %></td>
+    <td><%= link_to "Destroy", book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %></td>
+  </tr>
+  <% end %>
+</table>
 
 <h2>New Book</h2>
 <%= form_with model: Book.new do |f| %>
